--- a/index.htm
+++ b/index.htm
@@ -6,7 +6,8 @@
     <br/>  <br/> <br/>
     <div style="text-align: center">
     <p> Click the link below to download the Latin Dictionary app for macOS! </p>
-      <p> Please note that users must have Java installed to run the Latin Dictionary app. </p>
+      <p> Please note that users must have Java installed to run the Latin Dictionary app. <br/>
+          If Java is not currently installed on your computer, you can download it <a href="https://www.oracle.com/java/technologies/javase-jdk16-downloads.html">here</a></p>
      <br />
       <a href="LatinDictionaryInstall.zip" download>Download App</a>
       <br/>
